fixed spacing

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -38,3 +38,11 @@
 .search-form-control{
   float:right;
 }
+
+.form-control{
+  width: 350px;
+}
+
+.avatar{
+  margin-left: 20px;
+}
